text alignment fixed

--- a/app/assets/stylesheets/layouts/editor/_interstitial.sass
+++ b/app/assets/stylesheets/layouts/editor/_interstitial.sass
@@ -182,7 +182,7 @@ $transition: 0.75s //when changing please update it in "interstitial-view.coffee
       flex: 0 1 auto
       flex-flow: column nowrap
       display: flex
-      width: 15em
+      width: 15.5em
       height: 15em
 
       &.bigger
@@ -218,7 +218,7 @@ $transition: 0.75s //when changing please update it in "interstitial-view.coffee
         border: solid 2px #27ab9e
 
         i
-          animation: jingle 0.67s ease-out 1
+          animation: jingle 0.67s ease-out
 
   .interstitial-container
     position: absolute
